fix: move models into same folder structure as tests/contracts
This was a big change because it touched all files, and inlcuded reorganizing some more items for consitency and a few little things along the way.

This also introduces an environment var to the github action that will suprress clarinet hints.

--- a/.github/workflows/test-contract.yaml
+++ b/.github/workflows/test-contract.yaml
@@ -15,6 +15,9 @@ on:
   # allow running manually
   workflow_dispatch:
 
+env:
+  CLARINET_DISABLE_HINTS: 1
+
 jobs:
   test-contracts:
     runs-on: ubuntu-latest
