--- a/package.json
+++ b/package.json
@@ -7,17 +7,25 @@
     "test": "npm run test:cities && npm run test:base && npm run test:misc",
     "test:cities": "npm run test:mia && npm run test:nyc",
     "test:mia": "npm run test:mia:auth && npm run test:mia:core && npm run test:mia:token",
-    "test:mia:auth": "clarinet test ./tests/cities/mia/auth",
+    "test:mia:auth": "npm run test:mia:auth:v1 && npm run test:mia:auth:v2",
+    "test:mia:auth:v1": "clarinet test ./tests/cities/mia/auth/auth-v1",
+    "test:mia:auth:v2": "clarinet test ./tests/cities/mia/auth/auth-v2",
     "test:mia:core": "npm run test:mia:core:v1 && npm run test:mia:core:v2",
     "test:mia:core:v1": "clarinet test ./tests/cities/mia/core/core-v1",
     "test:mia:core:v2": "clarinet test ./tests/cities/mia/core/core-v2",
-    "test:mia:token": "clarinet test ./tests/cities/mia/token",
+    "test:mia:token": "npm run test:mia:token:v1 && npm run test:mia:token:v2",
+    "test:mia:token:v1": "clarinet test ./tests/cities/mia/token/token-v1",
+    "test:mia:token:v2": "clarinet test ./tests/cities/mia/token/token-v2",
     "test:nyc": "npm run test:nyc:auth && npm run test:nyc:core && npm run test:nyc:token",
-    "test:nyc:auth": "clarinet test ./tests/cities/nyc/auth",
+    "test:nyc:auth": "npm run test:nyc:auth:v1 && npm run test:nyc:auth:v2",
+    "test:nyc:auth:v1": "clarinet test ./tests/cities/nyc/auth/auth-v1",
+    "test:nyc:auth:v2": "clarinet test ./tests/cities/nyc/auth/auth-v2",
     "test:nyc:core": "npm run test:nyc:core:v1 && npm run test:nyc:core:v2",
     "test:nyc:core:v1": "clarinet test ./tests/cities/nyc/core/core-v1",
     "test:nyc:core:v2": "clarinet test ./tests/cities/nyc/core/core-v2",
-    "test:nyc:token": "clarinet test ./tests/cities/nyc/token",
+    "test:nyc:token": "npm run test:nyc:token:v1 && npm run test:nyc:token:v2",
+    "test:nyc:token:v1": "clarinet test ./tests/cities/nyc/token/token-v1",
+    "test:nyc:token:v2": "clarinet test ./tests/cities/nyc/token/token-v2",
     "test:base": "npm run test:base:auth && npm run test:base:core && npm run test:base:token",
     "test:base:auth": "clarinet test ./tests/base/auth",
     "test:base:core": "clarinet test ./tests/base/core",
