--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -20,6 +20,14 @@ contract_id = "SP2H8PY27SEZ03MWRKS5XABZYQN17ETGQS3527SA5.newyorkcitycoin-token"
 contract_id = "SP2H8PY27SEZ03MWRKS5XABZYQN17ETGQS3527SA5.newyorkcitycoin-core-v1"
 [[project.requirements]]
 contract_id = "SP2NS7CNBBN3S9J6M4JJHT7WNBETRSBZ9KPVRENBJ.citycoin-tardis-v2"
+[[project.requirements]]
+contract_id = "SP1H1733V5MZ3SZ9XRW9FKYGEZT0JDGEB8Y634C7R.miamicoin-auth-v2"
+[[project.requirements]]
+contract_id = "SP1H1733V5MZ3SZ9XRW9FKYGEZT0JDGEB8Y634C7R.miamicoin-token-v2"
+[[project.requirements]]
+contract_id = "SP1H1733V5MZ3SZ9XRW9FKYGEZT0JDGEB8Y634C7R.miamicoin-core-v2"
+[[project.requirements]]
+contract_id = "SP2NS7CNBBN3S9J6M4JJHT7WNBETRSBZ9KPVRENBJ.citycoin-tardis-v3"
 
 # contracts listed below are already deployed
 # and added only to ensure clarinet check passes
@@ -55,9 +63,15 @@ depends_on = []
 [contracts.citycoin-tardis-v2-mainnet]
 path = "contracts/tardis/mainnet/citycoin-tardis-v2.clar"
 depends_on = []
+[contracts.citycoin-tardis-v3-mainnet]
+path = "contracts/tardis/mainnet/citycoin-tardis-v3.clar"
+depends_on = []
 
 [contracts.citycoin-vote-v1-mainnet]
 path = "contracts/vote/mainnet/citycoins-vote-v1.clar"
+depends_on = []
+[contracts.citycoin-vote-v2-mainnet]
+path = "contracts/vote/mainnet/citycoins-vote-v2.clar"
 depends_on = []
 
 # all contracts below are used with the testing suite
