fix: add local version of tardis contract
Also adjusts the block heights and contract principals used in the local vote contract to allow for testing. Mainnet values are stored in comments.

Also removes CCIP-013 and returns only CCIP-012 data since that's what the vote covers.

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -219,6 +219,10 @@ depends_on = ["citycoin-core-v1"]
 path = "contracts/tardis/local/citycoin-tardis-v2.clar"
 depends_on = ["citycoin-core-v1"]
 
+[contracts.citycoin-tardis-v3]
+path = "contracts/tardis/local/citycoin-tardis-v3.clar"
+depends_on = ["citycoin-core-v1"]
+
 # utilities
 
 [contracts.sip-010-trait-ft-standard]
