fix: add vote-v2 mainnet contract to clarinet config

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -59,6 +59,9 @@ depends_on = []
 [contracts.citycoin-vote-v1-mainnet]
 path = "contracts/vote/mainnet/citycoins-vote-v1.clar"
 depends_on = []
+[contracts.citycoin-vote-v2-mainnet]
+path = "contracts/vote/mainnet/citycoins-vote-v2.clar"
+depends_on = []
 
 # all contracts below are used with the testing suite
 
